# citation-metrics

./: README.md  aging_A5052404353.csv  author_metrics_progress.json  cited_author_orcids.txt  cited_authors_metrics.xlsx  generate_author_report.py  get_cited_author_orcids.py  lognormal_A5052404353.csv  pyproject.toml
citation_metrics/: cli.py  config.py  metrics.py  openalex.py
tests/: test_metrics.py  test_openalex.py
