[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citation-metrics"
version = "0.1.0"
description = "Alternative citation metrics for academic authors using OpenAlex API"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
citation-metrics = "citation_metrics.cli:main"

[tool.setuptools.packages.find]
include = ["citation_metrics*"]
